force-app/main/default/objects/Account_Initiative__c/Account_Initiative__c.object-meta.xml
<CustomObject>
    <description>Account Initiative object to help store goals by Account (SDS-1922)</description>
    <label>Account Initiative</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Initiative Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Initiatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>