force-app/main/default/objects/Account_Initiative__c/fields/Account_Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Region__c</fullName>
    <formula>TEXT (Account__r.Billing_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Region</label>
    <type>Text</type>
</CustomField>