force-app/main/default/objects/Account_Initiative__c/fields/Automotive_AM_PIC__c.field-meta.xml
<CustomField>
    <fullName>Automotive_AM_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automotive AM PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Initiatives1</relationshipName>
    <type>Lookup</type>
</CustomField>