force-app/main/default/objects/Account_Initiative__c/fields/Constellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Constellation_Status__c</fullName>
    <label>Constellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Exploratory</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>