force-app/main/default/objects/Account_Initiative__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <label>Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX for Auto</fullName>
            </value>
            <value>
                <fullName>Constellation</fullName>
            </value>
            <value>
                <fullName>Auto Datacenter</fullName>
                <isActive>false</isActive>
                <label>Auto Datacenter</label>
            </value>
            <value>
                <fullName>CICN</fullName>
                <isActive>false</isActive>
                <label>CICN</label>
            </value>
            <value>
                <fullName>Cryo-EM</fullName>
                <isActive>false</isActive>
                <label>Cryo-EM</label>
            </value>
            <value>
                <fullName>Data Science</fullName>
                <isActive>false</isActive>
                <label>Data Science</label>
            </value>
            <value>
                <fullName>Financial Services (FSI)</fullName>
                <isActive>false</isActive>
                <label>Financial Services (FSI)</label>
            </value>
            <value>
                <fullName>Genomics</fullName>
                <isActive>false</isActive>
                <label>Genomics</label>
            </value>
            <value>
                <fullName>HER Target</fullName>
                <isActive>false</isActive>
                <label>HER Target</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
            <value>
                <fullName>SuperPOD</fullName>
                <isActive>false</isActive>
                <label>SuperPOD</label>
            </value>
            <value>
                <fullName>Supercomputing</fullName>
                <isActive>false</isActive>
                <label>Supercomputing</label>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
                <isActive>false</isActive>
                <label>Telecommunications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>