force-app/main/default/objects/Account_Initiative__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>