force-app/main/default/objects/Account_Initiative__c/fields/RePlay__c.field-meta.xml
<CustomField>
    <fullName>RePlay__c</fullName>
    <label>RePlay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>