force-app/main/default/objects/Account_Initiative__c/fields/SIM__c.field-meta.xml
<CustomField>
    <fullName>SIM__c</fullName>
    <label>SIM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>