force-app/main/default/objects/Account_Initiative__c/fields/Verified_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Verified_Opportunity__c</fullName>
    <label>Verified Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Work-in-Progress (WIP)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>