force-app/main/default/objects/Account_Initiative__c/fields/X1_Year_Potential__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Potential__c</fullName>
    <label>1 Year Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>