force-app/main/default/objects/Account_Initiative__c/recordTypes/Constellation_Initiative.recordType-meta.xml
<RecordType>
    <fullName>Constellation_Initiative</fullName>
    <active>true</active>
    <description>Used for Constellation Account Initiatives</description>
    <label>Constellation Initiative</label>
</RecordType>