force-app/main/default/objects/Account_Initiative__c/recordTypes/DGX_for_Auto_Initiative.recordType-meta.xml
<RecordType>
    <fullName>DGX_for_Auto_Initiative</fullName>
    <active>true</active>
    <description>Used for DGX for Auto Account Initiatives</description>
    <label>DGX for Auto Initiative</label>
</RecordType>