force-app/main/default/objects/Account_Initiative__c/listViews/All_Account_Initiatives.listView-meta.xml
<ListView>
    <fullName>All_Account_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Initiative__c</columns>
    <columns>X1_Year_Potential__c</columns>
    <columns>X4_Year_Potential__c</columns>
    <columns>Priority__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Initiatives</label>
</ListView>